--- a/практика ex1/restaurant.html
+++ b/практика ex1/restaurant.html
@@ -21,8 +21,7 @@
         <input
           type="text"
           class="input input-address"
-          placeholder="Адрес доставки"
-        />
+          placeholder="Адрес доставки"/>
         <div class="buttons">
           <button class="button button-primary">
             <img src="img/user.svg" alt="user" class="button-icon" />
@@ -32,8 +31,7 @@
             <img
               src="img/shopping-cart.svg"
               alt="shopping cart"
-              class="button-icon"
-            />
+              class="button-icon"/>
             <span class="button-text">Корзина</span>
           </button>
         </div>
@@ -49,21 +47,21 @@
                 <img src="img/rating.svg" alt="rating" />
                 4.5
               </div>
-              <div class="price">От 900 ₽</div>
+              <div class="price">От 200 ₽</div>
               <div class="category">Суши и роллы</div>
             </div>
           </div>
           <div class="cards">
             <div class="card wow animate__fadeInUp" data-wow-delay="0.2s">
-              <img src="img/card-image1.jpg" alt="image" class="card-img" />
+              <img src="img/cart-image1.jpg" alt="image" class="card-img" />
               <div class="card-text">
                 <div class="card-heading">
-                  <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
-                  <span class="tag card-tag">50 мин</span>
+                  <h3 class="card-title card-title-reg">Калифорния</h3>
+                  <span class="tag card-tag">45 мин</span>
                 </div>
                 <div class="card-info">
                   <div class="ingredients">
-                    Рис, угорь, соус унаги, кунжут, водоросли нори.
+                    Рис, угорь, соус соевый, кунжут, водоросли нори, сыр Плавленный.
                   </div>
                 </div>
                 <div class="card-buttons">
@@ -74,20 +72,20 @@
                       alt="card-button-shopping"
                       class="button-card-img"/>
                   </button>
-                  <strong class="card-price-bold">200 ₽</strong>
+                  <strong class="card-price-bold">350 ₽</strong>
                 </div>
               </div>
             </div>
             <div class="card wow animate__fadeInUp" data-wow-delay="0.4s">
-              <img src="img/card-image2.jpg" alt="image" class="card-img" />
+              <img src="img/cart-image2.jpg" alt="image" class="card-img" />
               <div class="card-text">
                 <div class="card-heading">
-                  <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
-                  <span class="tag card-tag">50 мин</span>
+                  <h3 class="card-title card-title-reg">Запеченные роллы с куриным филе</h3>
+                  <span class="tag card-tag">40 мин</span>
                 </div>
                 <div class="card-info">
                   <div class="ingredients">
-                    Рис, угорь, соус унаги, кунжут, водоросли нори.
+                    Рис, огурцы, соус соевый, куриное филе, водоросли нори, авокадо, рыба.
                   </div>
                 </div>
                 <div class="card-buttons">
@@ -99,12 +97,12 @@
                       class="button-card-img"
                     />
                   </button>
-                  <strong class="card-price-bold">200 ₽</strong>
+                  <strong class="card-price-bold">300 ₽</strong>
                 </div>
               </div>
             </div>
             <div class="card wow animate__fadeInUp" data-wow-delay="0.6s">
-              <img src="img/card-image3.jpg" alt="image" class="card-img" />
+              <img src="img/cart-image3.jpg" alt="image" class="card-img" />
               <div class="card-text">
                 <div class="card-heading">
                   <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
@@ -115,7 +113,6 @@
                     Рис, угорь, соус унаги, кунжут, водоросли нори.
                   </div>
                 </div>
-                <!-- /.card-info -->
                 <div class="card-buttons">
                   <button class="button button-primary">
                     <span class="button-card-text">В корзину</span>
@@ -130,15 +127,15 @@
               </div>
             </div>
             <div class="card wow animate__fadeInUp" data-wow-delay="0.2s">
-              <img src="img/card-image4.jpg" alt="image" class="card-img" />
+              <img src="img/cart-image4.jpg" alt="image" class="card-img" />
               <div class="card-text">
                 <div class="card-heading">
-                  <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
-                  <span class="tag card-tag">50 мин</span>
+                  <h3 class="card-title card-title-reg">Маки-роллы с лососем</h3>
+                  <span class="tag card-tag">35 мин</span>
                 </div>
                 <div class="card-info">
                   <div class="ingredients">
-                    Рис, угорь, соус унаги, кунжут, водоросли нори.
+                    Лосось, рис, вода, листья, водоросли нори.
                   </div>
                 </div>
                 <div class="card-buttons">
@@ -150,21 +147,21 @@
                       class="button-card-img"
                     />
                   </button>
-                  <strong class="card-price-bold">200 ₽</strong>
+                  <strong class="card-price-bold">250 ₽</strong>
                 </div>
               </div>
             </div>
             <div class="card wow animate__fadeInUp" data-wow-delay="0.4s">
-              <img src="img/card-image5.jpg" alt="image" class="card-img" />
+              <img src="img/cart-image5.jpg" alt="image" class="card-img" />
               <div class="card-text">
                 <div class="card-heading">
-                  <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
-                  <span class="tag card-tag">50 мин</span>
+                  <h3 class="card-title card-title-reg">Роллы с курицей</h3>
+                  <span class="tag card-tag">35 мин</span>
                 </div>
                 <!-- /.card-heading -->
                 <div class="card-info">
                   <div class="ingredients">
-                    Рис, угорь, соус унаги, кунжут, водоросли нори.
+                    Рис, куринные ножки, огурцы, сыр, водоросли нори.
                   </div>
                 </div>
                 <div class="card-buttons">
@@ -176,20 +173,20 @@
                       class="button-card-img"
                     />
                   </button>
-                  <strong class="card-price-bold">200 ₽</strong>
+                  <strong class="card-price-bold">299 ₽</strong>
                 </div>
               </div>
             </div>
             <div class="card wow animate__fadeInUp" data-wow-delay="0.6s">
-              <img src="img/card-image6.jpg" alt="image" class="card-img" />
+              <img src="img/cart-image6.jpg" alt="image" class="card-img" />
               <div class="card-text">
                 <div class="card-heading">
-                  <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
-                  <span class="tag card-tag">50 мин</span>
+                  <h3 class="card-title card-title-reg">Роллы с огурцом и форелью</h3>
+                  <span class="tag card-tag">35 мин</span>
                 </div>
                 <div class="card-info">
                   <div class="ingredients">
-                    Рис, угорь, соус унаги, кунжут, водоросли нори.
+                    Рис, огурцы, рыба красная, сыр сливочный, водоросли нори.
                   </div>
                 </div>
                 <div class="card-buttons">
@@ -201,7 +198,7 @@
                       class="button-card-img"
                     />
                   </button>
-                  <strong class="card-price-bold">200 ₽</strong>
+                  <strong class="card-price-bold">399 ₽</strong>
                 </div>
               </div>
             </div>
@@ -241,7 +238,7 @@
         </div>
         <div class="modal-body">
           <div class="food-row">
-            <span class="food-name">Ролл угорь стандарт</span>
+            <span class="food-name">Калифорния</span>
             <strong class="food-price">250 ₽</strong>
             <div class="food-counter">
               <button class="counter-button">-</button>
@@ -250,8 +247,8 @@
             </div>
           </div>
           <div class="food-row">
-            <span class="food-name">Ролл угорь стандарт</span>
-            <strong class="food-price">250 ₽</strong>
+            <span class="food-name">Запеченные роллы с куриным филе</span>
+            <strong class="food-price">300 ₽</strong>
             <div class="food-counter">
               <button class="counter-button">-</button>
               <span class="counter">1</span>
@@ -260,6 +257,15 @@
           </div>
           <div class="food-row">
             <span class="food-name">Ролл угорь стандарт</span>
+            <strong class="food-price">200 ₽</strong>
+            <div class="food-counter">
+              <button class="counter-button">-</button>
+              <span class="counter">1</span>
+              <button class="counter-button">+</button>
+            </div>
+          </div>
+          <div class="food-row">
+            <span class="food-name">Маки-роллы с лососем</span>
             <strong class="food-price">250 ₽</strong>
             <div class="food-counter">
               <button class="counter-button">-</button>
@@ -268,17 +274,8 @@
             </div>
           </div>
           <div class="food-row">
-            <span class="food-name">Ролл угорь стандарт</span>
-            <strong class="food-price">250 ₽</strong>
-            <div class="food-counter">
-              <button class="counter-button">-</button>
-              <span class="counter">1</span>
-              <button class="counter-button">+</button>
-            </div>
-          </div>
-          <div class="food-row">
-            <span class="food-name">Ролл угорь стандарт</span>
-            <strong class="food-price">250 ₽</strong>
+            <span class="food-name">Роллы с курицей</span>
+            <strong class="food-price">299 ₽</strong>
             <div class="food-counter">
               <button class="counter-button">-</button>
               <span class="counter">1</span>
